# ImBored

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/include/: FontManager.hpp  Game.hpp  GameScreen.hpp  GameState.hpp  Keybind.hpp  KeybindManager.hpp  ScreenManager.hpp  UpdateManager.hpp  Window.hpp  WindowScreen.hpp
core/src/: FontManager.cpp  Game.cpp  GameScreen.cpp  KeybindManager.cpp  ScreenManager.cpp  UpdateManager.cpp  Window.cpp  WindowScreen.cpp
frogger_game/include/: FroggerGame.hpp  Hazard.hpp  HazardManager.hpp  LaneTypes.hpp
frogger_game/src/: FroggerGame.cpp
home_screen/include/: HomeScreen.hpp
home_screen/src/: HomeScreen.cpp
snake_game/include/: SnakeDir.hpp  SnakeGame.hpp
snake_game/src/: SnakeGame.cpp
utils/include/: RandomUtil.hpp
utils/src/: RandomUtil.cpp
